DTS-41616: cod kpi fix