@@ -18,22 +18,27 @@
 
 package com.publicissapient.kpidashboard.apis.jira.scrum.service;
 
-import java.time.LocalDateTime;
+import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeFormatterBuilder;
-import java.time.temporal.ChronoField;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.apis.appsetting.service.ConfigHelperService;
 import com.publicissapient.kpidashboard.apis.common.service.CacheService;
 import com.publicissapient.kpidashboard.apis.filter.service.FilterHelperService;
+import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
+import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueCustomHistoryRepository;
+import com.publicissapient.kpidashboard.common.util.DateUtil;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.tuple.Pair;
+import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -57,7 +62,6 @@ import com.publicissapient.kpidashboard.common.model.application.DataCount;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueRepository;
-import com.publicissapient.kpidashboard.common.util.DateUtil;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -67,6 +71,7 @@ import lombok.extern.slf4j.Slf4j;
 public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>, Map<String, Object>> {
 
 	private static final String COD_DATA = "costOfDelayData";
+	private static final String COD_DATA_HISTORY = "costOfDelayDataHistory";
 	@Autowired
 	private JiraIssueRepository jiraIssueRepository;
 	@Autowired
@@ -75,6 +80,10 @@ public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>,
 	private FilterHelperService flterHelperService;
 	@Autowired
 	private CacheService cacheService;
+	@Autowired
+	private JiraIssueCustomHistoryRepository jiraIssueCustomHistoryRepository;
+	@Autowired
+	private ConfigHelperService configHelperService;
 
 	@Override
 	public Double calculateKPIMetrics(Map<String, Object> subCategoryMap) {
@@ -109,27 +118,51 @@ public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>,
 		return kpiElement;
 	}
 
+	/**
+	 * Fetches KPI data from the database for the given list of project nodes.
+	 *
+	 * @param leafNodeList the list of project nodes
+	 * @param startDate the start date for the KPI data (not used in this implementation)
+	 * @param endDate the end date for the KPI data (not used in this implementation)
+	 * @param kpiRequest the KPI request object containing additional request details
+	 * @return a map containing the fetched KPI data, with keys "costOfDelayData" and "costOfDelayDataHistory"
+	 */
 	@Override
 	public Map<String, Object> fetchKPIDataFromDb(List<Node> leafNodeList, String startDate, String endDate,
 			KpiRequest kpiRequest) {
 
 		Map<String, Object> resultListMap = new HashMap<>();
-		Map<String, List<String>> mapOfFilters = new LinkedHashMap<>();
-		List<String> basicProjectConfigIds = new ArrayList<>();
+		Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
 		if (CollectionUtils.isNotEmpty(leafNodeList)) {
 
-			leafNodeList.forEach(
-					leaf -> basicProjectConfigIds.add(leaf.getProjectFilter().getBasicProjectConfigId().toString()));
+			leafNodeList.forEach(leaf -> {
+				List<String> basicProjectConfigIds = new ArrayList<>();
+				Map<String, Object> mapOfFilters = new LinkedHashMap<>();
+				ObjectId basicProjectConfigId = leaf.getProjectFilter().getBasicProjectConfigId();
+				basicProjectConfigIds.add(leaf.getProjectFilter().getBasicProjectConfigId().toString());
+				FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
+                List<String> jiraCloseStatuses = new ArrayList<>();
+				if(CollectionUtils.isNotEmpty(fieldMapping.getClosedIssueStatusToConsiderKpi113())) {
+					jiraCloseStatuses.addAll(fieldMapping.getClosedIssueStatusToConsiderKpi113());
+				}
+                List<String> jiraIssueType = new ArrayList<>();
+				if(CollectionUtils.isNotEmpty(fieldMapping.getIssueTypesToConsiderKpi113())) {
+					jiraIssueType.addAll(fieldMapping.getIssueTypesToConsiderKpi113());
+				}
+				mapOfFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(),jiraIssueType);
+				mapOfFilters.put(JiraFeature.STATUS.getFieldValueInFeature(), jiraCloseStatuses);
+				mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
+						basicProjectConfigIds.stream().distinct().toList());
+				uniqueProjectMap.put(basicProjectConfigId.toString(), mapOfFilters);
+			});
+
 		}
-
-		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
-				basicProjectConfigIds.stream().distinct().collect(Collectors.toList()));
-
-		mapOfFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(),
-				Arrays.asList(NormalizedJira.ISSUE_TYPE.getValue()));
-		mapOfFilters.put(JiraFeature.STATUS.getFieldValueInFeature(), Arrays.asList(NormalizedJira.STATUS.getValue()));
-		List<JiraIssue> codList = jiraIssueRepository.findCostOfDelayByType(mapOfFilters);
+		List<JiraIssue> codList = jiraIssueRepository.findIssuesByFilterAndProjectMapFilter(new HashMap<>(), uniqueProjectMap);
+		List<JiraIssueCustomHistory> codHistory = jiraIssueCustomHistoryRepository
+				.findByStoryIDInAndBasicProjectConfigIdIn(
+						codList.stream().map(JiraIssue::getNumber).toList(), new ArrayList<>(uniqueProjectMap.keySet()));
 		resultListMap.put(COD_DATA, codList);
+		resultListMap.put(COD_DATA_HISTORY, codHistory);
 		return resultListMap;
 	}
 
@@ -155,15 +188,20 @@ public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>,
 			List<DataCount> trendValueList, KpiElement kpiElement, String requestTrackerId, KpiRequest kpiRequest) {
 
 		Map<String, Object> resultMap = fetchKPIDataFromDb(projectLeafNodeList, null, null, kpiRequest);
-		Map<String, List<JiraIssue>> filterWiseDataMap = createProjectWiseDelay(
-				(List<JiraIssue>) resultMap.get(COD_DATA));
+		Map<String, List<JiraIssue>> filterWiseDataMap = createProjectWiseGrouping(
+				(List<JiraIssue>) resultMap.get(COD_DATA), JiraIssue::getBasicProjectConfigId);
+		Map<String, List<JiraIssueCustomHistory>> filterWiseHistoryDataMap = createProjectWiseGrouping(
+				(List<JiraIssueCustomHistory>) resultMap.get(COD_DATA_HISTORY),
+				JiraIssueCustomHistory::getBasicProjectConfigId);
 		List<KPIExcelData> excelData = new ArrayList<>();
 
 		projectLeafNodeList.forEach(node -> {
 			String currentProjectId = node.getProjectFilter().getBasicProjectConfigId().toString();
 			List<JiraIssue> delayDetail = filterWiseDataMap.get(currentProjectId);
+			List<JiraIssueCustomHistory> delayDetailHistory = filterWiseHistoryDataMap.get(currentProjectId);
 			if (CollectionUtils.isNotEmpty(delayDetail)) {
-				setProjectNodeValue(mapTmp, node, delayDetail, trendValueList, requestTrackerId, excelData);
+				setProjectNodeValue(mapTmp, node, delayDetail, delayDetailHistory, trendValueList, requestTrackerId,
+						excelData);
 			}
 
 		});
@@ -172,15 +210,18 @@ public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>,
 	}
 
 	/**
-	 * Gets the KPI value for project node.
+	 * Sets the project node value by calculating the cost of delay for each Jira issue.
 	 *
-	 * @param kpiElement
-	 * @param jiraIssues
-	 * @param trendValueList
-	 * @return
+	 * @param mapTmp a map of node IDs to nodes
+	 * @param node the current node being processed
+	 * @param jiraIssues a list of Jira issues related to the node
+	 * @param trendValueList a list to store the trend values for the KPI
+	 * @param requestTrackerId the ID of the request tracker
+	 * @param excelData a list to store the data for the Excel report
 	 */
 	private void setProjectNodeValue(Map<String, Node> mapTmp, Node node, List<JiraIssue> jiraIssues,
-			List<DataCount> trendValueList, String requestTrackerId, List<KPIExcelData> excelData) {
+			List<JiraIssueCustomHistory> jiraIssueCustomHistories, List<DataCount> trendValueList,
+			String requestTrackerId, List<KPIExcelData> excelData) {
 		Map<String, Double> lastNMonthMap = getLastNMonth(customApiConfig.getJiraXaxisMonthCount());
 		String projectName = node.getProjectFilter().getName();
 		List<JiraIssue> epicList = new ArrayList<>();
@@ -188,12 +229,18 @@ public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>,
 
 		for (JiraIssue js : jiraIssues) {
 			String number = js.getNumber();
-			String dateTime = js.getChangeDate() == null ? js.getUpdateDate() : js.getChangeDate();
-			if (dateTime != null) {
-				DateTimeFormatter formatter = new DateTimeFormatterBuilder().appendPattern(DateUtil.TIME_FORMAT)
-						.optionalStart().appendPattern(".").appendFraction(ChronoField.MICRO_OF_SECOND, 1, 9, false)
-						.optionalEnd().toFormatter();
-				LocalDateTime dateValue = LocalDateTime.parse(dateTime, formatter);
+			Optional<String> epicEndDateOpt = jiraIssueCustomHistories.stream()
+					.filter(jiraIssueCustomHistory -> jiraIssueCustomHistory.getStoryID().equals(number)).findFirst()
+					.flatMap(jiraIssueCustomHistory -> jiraIssueCustomHistory.getStatusUpdationLog().stream()
+							.filter(jiraHistoryChangeLog -> jiraHistoryChangeLog.getChangedTo()
+									.equals(NormalizedJira.STATUS.getValue()))
+							.findFirst().map(jiraHistoryChangeLog -> jiraHistoryChangeLog.getUpdatedOn().toString()));
+			String epicEndDate = epicEndDateOpt.orElse(null);
+			js.setEpicEndDate(epicEndDate);
+			if (epicEndDate != null) {
+				DateTimeFormatter formatter = new DateTimeFormatterBuilder().appendPattern(DateUtil.DATE_FORMAT)
+						.toFormatter();
+				LocalDate dateValue = LocalDate.parse(epicEndDate.split("T")[0], formatter);
 				String date = dateValue.getYear() + Constant.DASH + dateValue.getMonthValue();
 				lastNMonthMap.computeIfPresent(date, (key, value) -> {
 					epicList.add(js);
@@ -234,15 +281,17 @@ public class CostOfDelayServiceImpl extends JiraKPIService<Double, List<Object>,
 	}
 
 	/**
-	 * Group list of data by project.
+	 * Groups a list of items by a project ID extracted using the provided function.
 	 *
-	 * @param resultList
-	 * @return
+	 * @param <T> the type of items in the list
+	 * @param resultList the list of items to be grouped
+	 * @param projectIdExtractor a function to extract the project ID from an item
+	 * @return a map where the keys are project IDs and the values are lists of items associated with those project IDs
 	 */
-
-	private Map<String, List<JiraIssue>> createProjectWiseDelay(List<JiraIssue> resultList) {
-		return resultList.stream().filter(p -> p.getBasicProjectConfigId() != null)
-				.collect(Collectors.groupingBy(JiraIssue::getBasicProjectConfigId));
+	private <T> Map<String, List<T>> createProjectWiseGrouping(List<T> resultList,
+			Function<T, String> projectIdExtractor) {
+		return resultList.stream().filter(p -> projectIdExtractor.apply(p) != null)
+				.collect(Collectors.groupingBy(projectIdExtractor));
 	}
 
 	@Override
